--- a/_layouts/course.html
+++ b/_layouts/course.html
@@ -10,6 +10,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Rubik+Glitch&family=Oxanium:wght@700;800&family=Orbitron:wght@400;700;900&family=Rajdhani:wght@300;500;700&family=Inter:wght@400;500;600;700&family=JetBrains+Mono:wght@400;700&display=swap" rel="stylesheet">
     
     <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kaiversus</title>
+    <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
+
+    <script type="text/javascript" async
+      src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML">
+    </script>
     
     <style>
         /* --- THEME CONFIG: MÀU CAM --- */
