--- a/_layouts/course.html
+++ b/_layouts/course.html
@@ -127,7 +127,7 @@
             text-align: left; 
             border-bottom: 2px solid var(--border-color);
             vertical-align: bottom; /* Căn đáy để đẹp hơn khi tiêu đề bị ngắt dòng */
-        
+            vertical-align: middle !important;
             /* QUAN TRỌNG: Cho phép tiêu đề xuống dòng để tiết kiệm diện tích ngang */
             white-space: normal !important; 
             max-width: 150px; /* Nếu tiêu đề dài quá 150px thì ép xuống dòng */
