--- a/_layouts/writeup.html
+++ b/_layouts/writeup.html
@@ -151,6 +151,7 @@
                 <a href="/">Homepage</a>
                 <a href="/about/">About_me</a> 
                 <a href="https://kaiversus.github.io/#writeups">Repository</a>
+                <button id="theme-toggle" class="theme-switch">☀ LIGHT</button>
             </nav>
         </header>
     </div>
